# ImageAnalyzer

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-04-30-image-analyzer-plan.md
docs/superpowers/specs/: 2026-04-30-image-analyzer-design.md
src/: App.svelte  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs  utils.rs
src-tauri/src/analyzer/: av1.rs  channel_split.rs  exif_reader.rs  gif_parser.rs  heif_parser.rs  hevc.rs  icc_parser.rs  iptc_reader.rs  jpeg_parser.rs  mod.rs  png_parser.rs  webp_parser.rs  xmp_reader.rs
src-tauri/tests/: jpeg_test.rs  png_test.rs
src/components/: DropZone.svelte  FileList.svelte  MainPanel.svelte  ThumbnailCard.svelte
src/components/tabs/: ChannelsTab.svelte  CodecSyntaxTab.svelte  ColorInfoTab.svelte  GridTab.svelte  MetadataTab.svelte  StructureTab.svelte  TreeNode.svelte
src/components/ui/: GridView.svelte  Histogram.svelte
src/lib/: store.svelte.ts  types.ts  utils.ts
